# CrewAI-Content-Creator

./: .gitignore  .pdm-python  README.md  linkedin-content.md  pyproject.toml  report.md  sample.env
reports/: content_drafting.md  final_editing.md  hook_creation.md  trend_spotting.md
src/groovi_content/: crew.py  main.py
src/groovi_content/config/: agents.yaml  tasks.yaml
